--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,6 +34,13 @@
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment" />
 
+    <TextView
+        android:id="@+id/mDebugText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Exciting, NO?"
+
+        />
 
 
     <!-- tools:context=".MapsActivity" -->
